<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Selma</string>
    <string name="action_license">License</string>
    <string name="action_show_tips">Show tips</string>
    <string name="action_scan">Scan for lessons</string>
    <string name="play_starred_lessons">Play starred lessons</string>
    <string name="play_starred_lessons_short">starred</string>
    <string name="starred_with_translate">incl. exercises</string>
    <string name="starred_without_translate">without exercises</string>
    <string name="play_all_lessons">Play all lessons</string>
    <string name="play_all_lessons_short">all</string>
    <string name="title_activity_show_lesson">Show Lesson</string>
    <string name="lesson">Lesson</string>
    <string name="warning_no_starred">You did not yet \"star\" any lessons&#8230; If you choose \"All Lessons\" in the navigation panel, you can \"star\" individual lessons by clicking on the star symbol.</string>
    <string name="selma_description">Welcome to Selma!\n\nSelma is an Android app that allows you to playback lessons from the Assimil language training courses\' MP3 CDs in a convenient way.\n\nImportant notice: The MP3 files that are needed for using this app are not contained. You need to buy the course (book and MP3 CD) separately and transfer the MP3s from the CD onto this device. The app cannot be used without.</string>
    <string name="selma_description_while_scanning">Selma is now searching for lessons on your device.</string>
    <string name="selma_description_no_content_found">No Assimil Audio Files have been found on your device.\n\nIf you do not own a Assimil language course you may safely uninstall this app by clicking \"Uninstall\", for more info click on \"Continue\".</string>
    <string name="selma_description_scanning_finished">Selma has found the lessons on your device. You can now start learning by clicking on \"Continue\". Have fun!</string>
    <string name="waiting_for_database">Please wait&#8230; loading lessons&#8230;</string>
    <string name="refreshing_database">Please wait&#8230; scanning for lessons&#8230;</string>
    <string name="no_content_found">No Assimil Audio Files have been found on your device. Please click here and we will guide you through a set of dialogs for setting up Selma.</string>
    <string name="show_license">Show License</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <string name="email_no_files_subject">[Selma] No files found</string>
    <string name="email_no_files_text1">Hi Frank,\n\nI\'m trying to use your app \"Selma\", using the following ASSIMiL course:\n\nISBN: </string>
    <string name="email_no_files_text2">\n\nAll the files show up in the Google Music App, but still they are not recognized by \"Selma\". Can you please help me? I am willing to answer a few questions from you.\n\nThank you and best regards,\n</string>
    <string name="email_chooser">Send email&#8230;</string>

    <string name="uninstall">Uninstall</string>
    <string name="continueDlg">Continue</string>
    <string name="no_files_title">No files found</string>
    <string name="open">Open</string>
    <string name="quit">Quit</string>
    <string name="no_files_dialog_2_msg">For more information on Selma and Assimil you can visit our web site.\n\nIf you already own an Assimil MP3 CD and want to use Selma for supporting your learning, please click \"Continue\".</string>
    <string name="open_web_site">Web site</string>
    <string name="no_files_dialog_3_msg">You need to transfer the MP3s from the Assimil MP3 CD onto this device (or its SD card).\n\nIf you don\'t know how to do this, please ask a friend or seek help on the internet.\n\nPlease note that you need to own a Assimil MP3 CD in order to use this app!\n\nPlease also note, that Selma does not work with the Assimil Audio CD sets. Only MP3 CDs are supported.\n\nClick \"Quit\" if you now want to start copying the MP3 files. Click \"Continue\" if you have already copied the files to this device.</string>
    <string name="no_files_dialog_4_msg">Good, so you already copied the MP3 files to this device, but unfortunately they were not found by Selma.\n\nThere can be several reasons for this.\n\nMaybe Selma was not shut down properly before the files were copied to this device. Please click on \"Re-try\" to let Selma scan again for files. Afterwards you will see a list with all the lessons available on this device or you will again see the dialogs you just clicked through. If that is the case, just click \"Continue\" until you are back here.\n\nIf you already tried this, please click \"Continue\".</string>
    <string name="retry">Re-try</string>
    <string name="no_files_dialog_5_msg">Another reason why the files don\'t show up in this app, is that your device did not yet recognize the new files. Normally, the files are recognized after they have been transferred and the device has been disconnected from the computer. However, it may be that this device did not yet scan for new files. You can check this in the \"Google Play Music\" app. To start this app, please click on \"Open\" and see if the Assimil course is shown there. After that please start Selma again. You will again see the dialogs you just clicked through. Please just click \"Continue\" until you are back here.\n\n If you already checked, and the course is also not shown in \"Google Play Music\", it is recommended to turn this device off and on again (sorry for the inconvenience). Please click on \"Quit\" and then turn off this device. After re-starting check again in \"Google Play Music\".\n\nClick on \"Continue\" if you have checked in \"Google Play Music\".</string>
    <string name="no_files_dialog_6_msg">Okay, so you have copied the files onto this device and you have rebooted it. Still the files don\'t show up here.\n\nHave the files been shown in \"Google Play Music\"?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_files_dialog_7a_msg">The course is shown in \"Google Play Music\" but not here, so probably Selma does not yet support your Assimil course. Please type in the ISBN number that is given on the box of the MP3 CD in the following field and click on \"Send email&#8230;\". I will try to figure out (together with your help) if it is possible to make Selma work for you.\n\nISBN:</string>
    <string name="no_files_dialog_7b_msg">Selma relies on the same mechanisms as \"Google Play Music\". If the files do not show up in there, it is also impossible for Selma to find them. If you don\'t know how to make the files show in \"Google Play Music\" there is not much support we can give you at this time. We are very sorry for this! Please consult a friend or internet resources on how to make your MP3s show up in \"Google Play Music\".</string>

    <string name="all_courses">All courses</string>
    <string name="all_lessons">All lessons</string>
    <string name="starred_lessons">Starred lessons</string>
    <string-array name="exercise_option_list">
        <item>Show exercises</item>
        <item>No exercises</item>
    </string-array>

    <string name="repeat_none">Repeat none</string>
    <string name="repeat_track">Repeat current track</string>
    <string name="repeat_lesson">Repeat current lesson</string>
    <string name="repeat_all">Repeat all lessons</string>
    <string name="how_to_star">You can click on the stars to mark the lessons that you are currently focusing on.</string>
    <string name="how_to_choose_displayed_lessons">Click here to open the navigation drawer and choose if you want to see all lessons or only the ones you starred. If you have installed several courses, you can also choose which course to show.</string>
    <string name="how_to_exercises">Click here to choose if you want to see only the lesson texts or also the exercises (translate) of the lesson.\n\nScroll down to see the exercises.</string>
    <string name="how_to_translations">You can switch between showing the original text, a translation and a literal translation by using the menu.\n\nTranslation and literal translation have to be provided by you.\n\nTo translate a text, long click on it.</string>
    <string name="how_to_playbar_buttons">Use these buttons for playback:\n\nLeft button changes repeat mode (long press to see all options).\n\nUse the second button to start or pause playback.\n\nPress the third button to jump to next text (only during playback).\n\nLast button jumps to next lesson (only during playback).</string>
    <string name="how_to_playbar_text">Here the current lesson and text is shown. Click anytime to jump to the current lesson.</string>
    <string name="how_to_video">To learn more about how to use Selma, please watch a short video.</string>
    <string name="how_to_openvideo">Open video</string>
    <string name="how_to_no_thanks">No, thanks!</string>

    <string name="view_original_text">View original</string>
    <string name="view_translation">View translation</string>
    <string name="view_literal">View literal translation</string>
    <string name="view_original_translation">View original &amp; translation</string>
    <string name="view_original_literal">View original &amp; literal</string>
    <string name="not_yet_translated">(Not translated yet)</string>
    <string name="change_original_text">Enter original text</string>
    <string name="change_translation">Enter translation</string>
    <string name="change_literal">Enter literal translation</string>
    <string name="add_to_flashcard">Add to flashcard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="note">Note</string>
    <string name="no_flashcard_app">You can synchronise your lessons with AnkiDroid - a flash card app. This allows you to memorise the sentences effectively. Do you want to install AnkiDroid from the Google Play Store?</string>
    <string name="install">Install</string>
    <string name="did_you_know">Did you know?</string>
    <string name="lesson_not_synced">Synchronize?</string>
    <string name="ask_if_lesson_shall_be_synced">This lesson is not yet synchronised with AnkiDroid. Do you want to
        synchronise now?
    </string>
    <string name="learn_more">Learn more</string>
    <string name="flashcard_app_not_enabled">It is possible to store your texts as flash cards in AnkiDroid. Do you want
        to enable this feature?
    </string>
    <string name="enable">Enable</string>
    <string name="crash_dialog_text">Oops! Selma has crashed! To help fix this problem, please consider sending a bug report to the developer.</string>
    <string name="action_log_to_dev">Developer log</string>
</resources>
