<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#CC444444"
	android:orientation="vertical"
	android:id="@+id/overlayLayout">

   	<TextView
   	    android:id="@+id/overlayCompleteViewText"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/how_to_translations"
	    android:layout_marginTop="58dp"
	    android:layout_marginLeft="8dp"
	    android:layout_marginRight="8dp"
	    android:textColor="@color/White"
	    android:textSize="20sp" />

   	<LinearLayout
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content" >

   		<Button
   		    android:id="@+id/buttonNoThanks"
   		    android:visibility="gone"
   		    android:layout_width="wrap_content"
   		    android:layout_height="wrap_content"
   		    android:text="@string/how_to_no_thanks" />

   		<Button
   		    android:id="@+id/buttonOpenVideo"
   		    android:visibility="gone"
   		    android:layout_width="wrap_content"
   		    android:layout_height="wrap_content"
   		    android:text="@string/how_to_openvideo" />

   	</LinearLayout>

</LinearLayout>