<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/courseName"
        android:paddingLeft="16dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:gravity="bottom|start"
        android:text="@string/all_courses"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/textViewAllLessons"
        android:paddingLeft="16dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:text="@string/all_lessons"
        android:gravity="center_vertical|start"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewStarredLessons"
        android:paddingLeft="16dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:text="@string/starred_lessons"
        android:gravity="center_vertical|start"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>